plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	// Pull in all plugin subprojects
	subprojects.each { subproject ->
		implementation project(":${subproject.name}")
	}

	implementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	implementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion

	implementation 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.github.apachecara.AllPluginsLauncher'

	jvmArgs "-ea",
		"--add-opens", "java.desktop/com.apple.eawt=ALL-UNNAMED",
		"--add-exports", "java.desktop/com.apple.eawt=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}
